2006-05-29  Jon A. Cruz  <jon@joncruz.org>

	* src/desktop.cpp, src/layer-manager.cpp, src/dialogs/layers-panel.cpp:
	Workaround to avoid assertion upon file revert.

2006-05-28  Bryce <bryce@bryceharrington.org>
	* sp-marker.cpp:  Adding documentation

2006-05-28  MenTaLguY  <mental@rydia.net>

	* src/dialogs/clonetiler.cpp, src/dialogs/iconpreview.cpp,
	  src/dialogs/stroke-style.cpp, src/display/curve.cpp,
	  src/display/sp-canvas.cpp, src/dyna-draw-context.cpp,
	  src/extension/internal/gnome.cpp, src/extension/internal/pdf.cpp,
	  src/extension/internal/ps.cpp, src/extension/internal/win32.cpp,
	  src/file.cpp, src/inkview.cpp, src/libnr/nr-macros.h,
	  src/libnr/nr-object.cpp, src/libnr/nr-path.cpp,
	  src/libnr/nr-pixblock.cpp, src/libnr/nr-pixblock-pattern.cpp,
	  src/libnr/nr-svp.cpp, src/libnr/nr-svp-render.cpp,
	  src/libnrtype/FontFactory.cpp, src/libnrtype/Layout-TNG-Output.cpp,
	  src/libnrtype/nr-type-primitives.cpp, src/path-chemistry.cpp,
	  src/splivarot.cpp, src/sp-marker.cpp, src/ui/widget/icon-widget.cpp,
	  src/widgets/icon.cpp:

	  replace nr_new() with g_new(), and try to converge on using the
	  glib allocator a little more instead of the others (aside from
	  libgc)

2006-05-28  MenTaLguY  <mental@rydia.net>

	* share/icons/icons.svg:

	  correct vertical text flow icon to  correctly reflect lines stacking
	  right-to-left, as well as improving pixel alignment on both text flow
	  icons

2006-05-28  MenTaLguY  <mental@rydia.net>

	* src/widgets/toolbox.cpp:

	  add tooltips to text toolbar widgets

2006-05-28  Jon A. Cruz  <jon@joncruz.org>

	* src/layer-manager.cpp, src/layer-manager.h,
	  src/preferences-skeleton.h, src/ui/dialog/inkscape-preferences.cpp,
	  src/ui/dialog/inkscape-preferences.h,
	  src/widgets/layer-selector.cpp, src/dialogs/layers-panel.cpp:

	  Finished option to turn on or off deslecting when switching layers.
	  Fixes RFE #1495701.

2006-05-28  Jon A. Cruz  <jon@joncruz.org>
